test/parsing/vass/ref-keyword-2.good
ref-keyword-2.chpl:2: error: syntax error near 'ref'
