test/parsing/vass/ref-keyword-2.chpl
var i:int;
var ref: int;
